# naughtyLLM

./: README.md  constraint.ipynb  pyproject.toml  tutorial.ipynb
evaluation/: run_gsm8k_eval.py  test_parse_answer.py
natllm/generation/: utils.py
natllm/validation/: __init__.py  json_reader.py  json_validator.py  main.py  number_FSM.py  regex_validator.py  tester.py
test/: conftest.py
test/generation/: utils_test.py
test/validation/: json_validator_test.py  regex_validator_test.py
